--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!doctype html>
 <html lang="en">
-    <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <link rel="stylesheet" href="CSS/dateandtimelooks.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <script src="JS/dateandtimescript.js" defer></script>  
-        <title>Breaking News</title>
-      </head>
-      <body>
-        <nav class="navbar navbar-dark bg-dark">
-          <span class="navbar-brand mb-0 h1">
-              <img src="https://64.media.tumblr.com/d85056c4aca1d3d480ae4f45c00296dc/c7361389f5f91f25-52/s640x960/61fab0f9138d914bf01cdbd4ff636c6fd2aaa7f3.pnj" width="30" height="30" class="d-inline-block align-top" alt="">
-             Squishmallow Palooza
-          </body>
-          </span>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-         <form>
-        Input a Number: <input type="text" id="number">
-        <input type="submit">
-         </form>
-        </nav>
-  </body>
-  <body>
- <div id="introduction">
-      <h1>Different kinds of Squishmallows</h1>
-      <ul>
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="CSS/dateandtimelooks.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="JS/dateandtimescript.js" defer></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>Breaking News</title>
+</head>
+
+<body>
+  <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
+    <span class="navbar-brand mb-0 h1">
+      <img
+        src="https://64.media.tumblr.com/d85056c4aca1d3d480ae4f45c00296dc/c7361389f5f91f25-52/s640x960/61fab0f9138d914bf01cdbd4ff636c6fd2aaa7f3.pnj"
+        width="30" height="30" class="d-inline-block align-top" alt="">
+      Squishmallow Palooza
+</body>
+</span>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+  aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+  <ul class="navbar-nav me-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="#"> First </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#"> Second </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#"> Third </a>
+    </li>
+  </ul>
+</div>
+
+<form>
+  Input a Number: <input type="text" id="number">
+  <input type="submit">
+</form>
+</nav>
+</body>
+
+<body>
+  <div id="introduction">
+    <h1>Different kinds of Squishmallows</h1>
+    <ul>
       <li>Black cat</li>
       <li>Purple squid</li>
       <li>Blue lantern fish</li>
       <li>Red panda</li>
-      </ul>
-      <center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/1ilNH7PKHxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </center>  
-    </div>
-      </ul>
-    </div>
-    <div class="datetime">
-        <div class="time"></div>
-        <div class="date"></div>
-    </div>
-  </body>
+    </ul>
+    <center>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/1ilNH7PKHxw" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </center>
+  </div>
+  </ul>
+  </div>
+  <div class="datetime">
+    <div class="time"></div>
+    <div class="date"></div>
+  </div>
+</body>
 <html>
